RESOLVED FIXED13439
4 problems found in dashboard-region parser and serializer
https://bugs.webkit.org/show_bug.cgi?id=13439
Summary 4 problems found in dashboard-region parser and serializer
Darin Adler
Reported 2007-04-21 15:42:41 PDT
I wrote a test for the code that parser and serializes CSS values for dashboard regions. Besides the fact that this probably shouldn't be a custom CSS value type, and besides noticing various quirks of the syntax, I discovered these bugs: - parser: any number of extra values are allowed and ignored after "none" - parser: extra values are allowed and ignored in the dashboard-region parameter list if they numbere exactly 1 (for short format) or 5 (for long format) - serializer: only the last region was written if a list included multiple regions - serializer: in the short form, 4 extra spaces were included before the end parenthesis I'd like to land these fixes and test cases.
Attachments
patch with new tests and change log (21.71 KB, patch)
2007-04-21 15:56 PDT, Darin Adler
timothy: review+
Darin Adler
Comment 1 2007-04-21 15:56:49 PDT
Created attachment 14127 [details] patch with new tests and change log
Darin Adler
Comment 2 2007-04-22 16:17:14 PDT
Sending LayoutTests/ChangeLog Adding LayoutTests/fast/css/dashboard-region-parser-expected.txt Adding LayoutTests/fast/css/dashboard-region-parser.html Sending LayoutTests/fast/css/dashboard-regions-attr-crash-expected.txt Sending LayoutTests/fast/css/dashboard-regions-attr-crash.html Sending WebCore/ChangeLog Sending WebCore/css/CSSPrimitiveValue.cpp Sending WebCore/css/cssparser.cpp Transmitting file data ........ Committed revision 21008.
Note You need to log in before you can comment on or make changes to this bug.