LayoutTests:

Reviewed by Tim Hatcher.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13439
          4 problems found in dashboard-region parser and serializer

        * fast/css/dashboard-region-parser.html: Added.
        * fast/css/dashboard-region-parser-expected.txt: Added.

        * fast/css/dashboard-regions-attr-crash.html: Updated bug URL to point to bugs.webkit.org
        instead of bugzilla.opendarwin.org. At some point we should do this for the roughly 100
        other tests that have the old URL.
        * fast/css/dashboard-regions-attr-crash-expected.txt: Ditto.

WebCore:

        Reviewed by Tim Hatcher.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13439
          4 problems found in dashboard-region parser and serializer

        Test: fast/css/dashboard-region-parser.html

        * css/CSSPrimitiveValue.cpp: (WebCore::CSSPrimitiveValue::cssText):
        Fix code that overwrote each additional region with the previous one to
        instead build a space-separated list. Check for the case of an identifier
        that's invalid, since that's (accidentally) how we represent a region
        value that doesn't have explicit top/right/bottom/left values. The old code
        would end up writing out four spaces after the region type.

        * css/cssparser.cpp: (WebCore::CSSParser::parseDashboardRegions):
        Fail to parse if there is something after the "none" identifier or after
        the arguments inside the dashboard-region "function". Also replaced code
        that produced a identifier with CSS_VAL_INVALID in a roundabout way with
        code that does it explicitly.



Canonical link: https://commits.webkit.org/17537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21008 268f45cc-cd09-0410-ab3c-d52691b4dbfc